--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,5 +1,11 @@
 .contact_list {
   display: flex;
   flex-direction: column;
+
   gap: 20px;
+
+  margin-right: auto;
+  margin-left: auto;
+
+  width: 500px;
 }
